# conn2res

./: .coverage  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  CuPy Install steps  LICENSE  MANIFEST.in  README.rst  dev_requirements.txt  memristive_network.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
conn2res/: __init__.py  _version.py  coding.py  connectivity.py  datasetsConn2Res.py  iodata.py  performance.py  plotting.py  readout.py  reservoir.py  task.py  tasks.py  utils.py  workflows.py
conn2res/tests/: .coverage  install_test.py  test_connectivity.py  test_reservoir.py  test_tasks.py
docs/: .readthedocs.yaml  Makefile  api.rst  changes.rst  citing.rst  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/source/: api.rst  citing.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: theme_overrides.css
docs/source/user_guide/: main_workflow.rst
examples/: README.rst  echo_state_network.py  echo_state_network_multiple_subjs.py  echo_state_network_multiple_tasks.py  esn.py  example1_figs.py  example1_sims.py  example2_figs.py  example2_sims.py  example3_figs.py  example3_sims.py  example4_sims.py  example5_sims.py  memory_capacity.py  memristive_network.py  mssn.py  plotting.py  tutorial.ipynb  tutorial.py  tutorial1.py  tutorial2.py  tutorial2_figs.py  tutorial2_sims.py  tutorial3_figs.py  tutorial3_sims.py  tutorial4_sims.py  tutorial_multiple_tasks.py
examples/tutorial 2/: tutorial2-1.py  tutorial2-2.py  tutorial2-analysis.py
