[metadata]
name = conn2res
url = https://github.com/estefanysuarez/conn2res
download_url = https://github.com/estefanysuarez/conn2res
author = Laura Suarez
maintainer = Laura Suarez
maintainer_email = laura.suarez@mail.mcgill.ca
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
license = BSD-3
description = A reservoir computing toolbox for neuroscientists
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = OS Independent
provides =
    conn2res

[options]
python_requires = >=3.8
install_requires =
    numpy >=1.21
    pandas >=1.3.4
    mdp >=3.6
    scikit-learn >=1.0
    scipy >=1.7
    matplotlib >=3.4
    seaborn >=0.11
    # neurogym
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx_gallery
    sphinx_rtd_theme

[options.package_data]
conn2res =
    examples/data/*

[versioneer]
VCS = git
style = pep440
versionfile_source = conn2res/_version.py
versionfile_build = conn2res/_version.py
tag_prefix =
parentdir_prefix =